fixing layout issues

--- a/src/components/Features/Feature.module.css
+++ b/src/components/Features/Feature.module.css
@@ -23,7 +23,7 @@ p {
     margin-top: 12rem;
   }
   .Features h2 {
-    font-size: 4.4rem;
+    font-size: 4.2rem;
   }
   .Features p {
     font-size: 1.4rem;
