--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -5,7 +5,7 @@
   background-image: url("../images/mainBackground.png");
   background-size: cover;
   background-repeat: no-repeat;
-  background-size: 100% 70%;
+  background-size: 100% 60%;
   background-position: top center;
   z-index: 1;
 }
