--- a/src/components/NavBar/Navbar.module.css
+++ b/src/components/NavBar/Navbar.module.css
@@ -15,7 +15,7 @@
 }
 .logo {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
   flex: 0 0 40%;
 }
@@ -74,5 +74,6 @@
   .list {
     display: flex;
     justify-content: space-between;
+    gap: 1rem;
   }
 }
