--- a/src/components/ShortListed/ShortListed.module.css
+++ b/src/components/ShortListed/ShortListed.module.css
@@ -4,7 +4,10 @@
   gap: 5rem;
   border: 1px solid #848ea033;
   border-radius: 10px;
-  max-width: 500px;
+  display: flex;
+  overflow: hidden;
+  max-width: 750px;
   padding: 5rem 5rem;
   margin: 2rem;
+  position: relative;
 }
