--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@ body {
   font-size: 1.6rem;
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
+  overflow-x: hidden;
   color: var(--color-body);
 }
 h1,
